# TextEditorC-

./: CMakeLists.txt  TextEditor.glade
.cache/clangd/index/: main.cpp.EB7CC86114645414.idx
src/: main.cpp  menubar.cpp  simple
src/include/: globals.h  menubar.h
